--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8888
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/book?serverTimezone=GMT
 spring.datasource.username=root
-spring.datasource.password=password
-
+spring.datasource.password=lovezero
+#家里 lovezero 公司  password
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
